colour contrast fix

--- a/_sass/_review.scss
+++ b/_sass/_review.scss
@@ -1,7 +1,7 @@
 .textbox {
   border-radius: 10px;
-  background-image: linear-gradient(var(--neutral-6), var(--neutral-6));
-  background-color: var(--wallet-low-contrast);
+  background-image: linear-gradient(var(--wallet-low-contrast), var(--wallet-low-contrast));
+  background-color: var(--neutral-6);
   padding: 15px 25px;
   margin: 10px 0;
   font-size: 17px;
@@ -134,8 +134,8 @@
       border-radius: 10px 10px 0 0;
       cursor: pointer;
       &.active {
-        background-image: linear-gradient(var(--neutral-6), var(--neutral-6));
-background-color: var(--wallet-gradient);
+        background-image: linear-gradient(var(--wallet-gradient), var(--wallet-gradient));
+        background-color: var(--neutral-6);
       }
       &::before {
         content: attr(data-text);
@@ -493,8 +493,8 @@ background-color: var(--wallet-gradient);
     flex-wrap: wrap;
   }
   > div {
-    background-image: linear-gradient(var(--neutral-6), var(--neutral-6));
-    background-color: var(--wallet-low-contrast);
+    background-image: linear-gradient(var(--wallet-low-contrast), var(--wallet-low-contrast));
+    background-color: var(--neutral-6);
     padding: 25px;
     border-radius: 15px;
     text-align: center;
@@ -537,8 +537,8 @@ background-color: var(--wallet-gradient);
     display: grid;
     grid-template: auto / auto auto 1fr;
     text-align: right;
-    background-image: linear-gradient(var(--neutral-6), var(--neutral-6));
-    background-color: var(--wallet-low-contrast);
+    background-image: linear-gradient(var(--wallet-low-contrast), var(--wallet-low-contrast));
+    background-color: var(--neutral-6);
     font-size: 17px;
     padding: 10px 20px 10px 10px;
     border-radius: 10px;
